fix: resolve Tailwind CSS issues in Dynamic-Practise project

--- a/Dynamic-Practise/views/host/register.ejs
+++ b/Dynamic-Practise/views/host/register.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 </head>
 <body>
   <main class="container mx-auto mt-10 max-w-xl rounded-2xl bg-white p-8 shadow-lg">
