--- a/Dynamic-Practise/views/host/sucessful.ejs
+++ b/Dynamic-Practise/views/host/sucessful.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 </head>
 <body>
-   <%- include('partials/nav') %>
+   <%- include('../partials/nav') %>
   <main class="container mx-auto bg-white shadow-lg rounded-lg p-8 mt-10 max-w-xl">
     
     <h2 class="text-5xl text-rose-500 font-bold text-center mb-6">
